# topaz

./: .gitattributes  .gitmodules  LICENSE  README.md  SCRIPTING.md  STYLE.md  doclinks_db.js  index.html  makefile  meson.build  meson_options.txt  meson_options_linux.txt  meson_options_windows.txt  searchindex_db.js  style.css
system/: README  meson.build
system/audioManager/alsa/src/: backend.h  main.c
system/audioManager/directSound/src/: backend.h  main.c
system/audioManager/noAudioManager/src/: backend.h  empty.c
system/audioManager/wasapi/src/: backend.h  main.c
system/audioManager_noAudioManager/: C_SOURCES  meson.build
system/audioManager_noAudioManager/src/: backend.h  empty.c
system/consoleDisplay/noConsoleDisplay/src/: backend.h  empty.c
system/consoleDisplay/posix/: compat_test.c
system/consoleDisplay/posix/src/: backend.h  main.c
system/consoleDisplay/winapi/: compat_test.c
system/consoleDisplay/winapi/src/: backend.h  main.c
system/decoder/binary/: meson.build
system/decoder/binary/src/: backend.h  main.c
system/display/glfw/: compat_test.c  meson.build
system/display/glfw/src/: backend.h  main.c
system/display/glfwwin32/: C_LIBRARIES
system/display/glfwwin32/src/: glfwwin32.c
system/display/ncurses/: meson.build
system/display/ncurses/src/: backend.h  ncurses.c
system/display/noDisplay/: meson.build
system/display/noDisplay/src/: backend.h  empty.c
system/display/ogl3/: compat_test.c  meson.build
system/display/ogl3/src/: backend.h  glad.h  main.c
system/display/ogles2/: meson.build
system/display/ogles2/src/: backend.h  main.c
system/display_glfwwin32/: C_SOURCES  C_TESTC
system/display_glfwwin32/src/: backend.h  glfwwin32.c
system/display_ncurses/: compat_test.c  meson.build
system/display_ncurses/src/: ncurses.c
system/display_noDisplay/: meson.build
system/display_noDisplay/src/: backend.h  empty.c
system/filesys/noFilesys/: meson.build
system/filesys/noFilesys/src/: backend.h  empty.c
system/filesys/posix/src/: backend.h  filesys_posix_topaz.c
system/filesys/winapi/: meson.build
system/filesys/winapi/src/: backend.h  filesys_posix_topaz.c  main.c
system/filesys_noFilesys/: C_SOURCES  meson.build
system/filesys_noFilesys/src/: backend.h  empty.c
system/filesys_posix/: C_SOURCES  C_TESTC  meson.build
system/filesys_posix/src/: backend.h  filesys_posix_topaz.c
system/filesystem/noFilesystem/src/: backend.h  empty.c
system/filesystem/posix/: compat_test.c
system/filesystem/posix/src/: backend.h  posix.c
system/filesystem/winapi/src/: backend.h  winapi.c
system/fontRenderer/freetype/: compat_test.c
system/fontRenderer/freetype/src/: backend.h  main.c
system/fontRenderer/noFontRenderer/src/: backend.h  empty.c
system/inputManager/glfw/: compat_test.c
system/inputManager/glfw/src/: backend.h  empty.c  main.c
system/inputManager/ncurses/src/: backend.h  ncurses.c
system/inputManager/noInputManager/src/: backend.h  empty.c
system/inputManager_ncurses/: meson.build
system/inputManager_ncurses/src/: backend.h  ncurses.c
system/inputManager_noInputManager/: C_SOURCES  meson.build
system/inputManager_noInputManager/src/: backend.h  empty.c
system/iox/ogg/: compat_test.c
system/iox/ogg/src/: backend.h  main.c
system/iox/rawdata/: meson.build
system/iox/rawdata/src/: backend.h  main.c
system/iox/tpng/src/: backend.h  main.c  test.c  tinfl.c  tinfl.h  tpng.c  tpng.h
system/renderer/noRenderer/: meson.build
system/renderer/noRenderer/src/: backend.h  empty.c
system/renderer/ogl3/: compat_test.c  meson.build
system/renderer/ogl3/src/: 2d.c  2d.h  backend.h  buffer.c  buffer.h  charpixel.c  charpixel.h  context.c  context.h  fragment_shader_2d.glsl  framebuffer.c  framebuffer.h  glad.c  glsl_bytes  glsl_to_bytes.c  main.c  program.c  program.h  program2d.c  program2d.h  texture.c  texture.h  vertex_shader_2d.glsl
system/renderer/ogles2/: meson.build
system/renderer/ogles2/src/: 2d.c  2d.h  backend.h  buffer.c  buffer.h  charpixel.c  charpixel.h  context.c  context.h  fragment_shader_2d.glsl  framebuffer.c  framebuffer.h  glsl_bytes  main.c  program.c  program.h  program2d.c  program2d.h  texture.c  texture.h  vertex_shader_2d.glsl
system/renderer/srgs/: meson.build
system/renderer/srgs/src/: backend.h  srgs.h  topaz_srgs.c
system/renderer_noRenderer/: C_SOURCES  meson.build
system/renderer_noRenderer/src/: backend.h  empty.c
system/renderer_srgs/: C_SOURCES  meson.build
system/renderer_srgs/src/: backend.h  srgs.c  srgs.h  topaz_srgs.c
system/script/documentation/: TOPAZ_CONSTANTS  entity  topaz  topaz_asset  topaz_audio  topaz_audio_playbacksound  topaz_automation  topaz_color  topaz_component  topaz_data  topaz_display  topaz_entity  topaz_filesystem  topaz_filesystem_path  topaz_font_manager  topaz_framebuffer  topaz_image  topaz_input  topaz_material  topaz_mesh  topaz_object2d  topaz_particle  topaz_particleemitter2d  topaz_resources  topaz_rng  topaz_scheduler  topaz_shape2d  topaz_shape3d  topaz_sound  topaz_statecontrol  topaz_text2d  topaz_vector  topaz_viewmanager
system/script/duktapeJS/: meson.build
system/script/duktapeJS/src/: backend.h  bootstrap.js  bootstrap_bytes  duk_config.h  duk_trans_dvalue.c  duk_trans_dvalue.h  js_to_string  js_to_string.c  main.c
system/script/gravity/: LICENSE  README
system/script/gravity/src/: backend.h  bootstrap.g  bootstrap_bytes  g_to_string.c  main.c
system/script/lua/src/: backend.h  bootstrap.lua  bootstrap_bytes  get_lua.sh  main.c  (+2 more)
system/script/noScript/: meson.build
system/script_duktapeJS/: meson.build
system/script_duktapeJS/src/: backend.h  bootstrap.js  bootstrap_bytes  main.c
system/script_noScript/: meson.build
system/script_noScript/src/: backend.h  empty.c
system/time/noTime/: meson.build
system/time/posix/: meson.build
system/time/winapi/: compat_test.c
system/time_noTime/: C_SOURCES  meson.build
system/time_noTime/src/: backend.h  empty.c
system/time_posix/: C_SOURCES  C_TESTC  meson.build
system/time_posix/src/: backend.h  time_posix_topaz.c
(+511 files in other folders)
