
option(
    'BuildMode', 
    type : 'combo', 
    choices : ['Debug', 'Release' ],

    value : 'Debug'
)
option(
    'IncludeTests', 
    type : 'boolean',

    value : true
)


option(
    'RendererBackend',
    type : 'combo',


    value   : 'srgs',
    choices : [
        'noRenderer',
        'srgs'
    ]
)


option(
    'DisplayBackend',
    type : 'combo',


    value : 'noDisplay',
    choices : [
        'noDisplay',
        'ncurses'
    ]
)


option(
    'AudioManagerBackend',
    type : 'combo',

    value : 'noAudioManager',
    choices : [
        'noAudioManager'
    ]
)


option(
    'InputManagerBackend',
    type : 'combo',

    value : 'noInputManager',
    choices : [
        'noInputManager',
        'ncurses'
    ]
)


option(
    'FilesystemBackend',
    type : 'combo',

    value : 'noFilesys',
    choices : [
        'noFilesys',
        'posix'
    ]
)


option(
    'TimeBackend',
    type : 'combo',

    value : 'posix',
    choices : [
        'noTime',
        'posix'
    ]
)

option(
    'ScriptBackend',
    type : 'combo',

    value : 'duktapeJS',
    choices : [
        'noScript',
        'duktapeJS'
    ]
)

