# Required changes to build to incorporate into file executable

handlers += {
    'name' : 'ncurses',
    'type' : 'inputManager',
    'sources' : ['system/inputManager_ncurses/src/ncurses.c'],
    'shouldTest' : true,
    'dependencies' : [
        {
            'name'          : 'ncursesw',
            'alternateName' : 'ncurses'
        }
    ]
}
