# Required changes to build to incorporate into file executable
handlers += {
    'name' : 'glfw',
    'type' : 'display',
    'sources' : ['system/display/glfw/src/main.c'],
    'shouldTest' : true,
    'dependencies' : [
        {
            'name'          : 'glfw3',
            'alternateName' : 'GLFW'
        }
    ]


}
