# Required changes to build to incorporate into file executable
handlers += {
    'name' : 'ogl3',
    'type' : 'display',
    'sources' : ['system/display/ogl3/src/main.c'],
    'shouldTest' : true,
    'dependencies' : [
        {
            'name'          : 'glfw3',
            'alternateName' : 'GLFW'
        },
        {
            'name'          : 'GL',
            'alternateName' : 'opengl'
        },

    ]

}
