# Required changes to build to incorporate into file executable
handlers += {
    'name' : 'ogles2',
    'type' : 'display',
    'sources' : ['system/display/ogles2/src/main.c'],
    'shouldTest' : true,
    'dependencies' : [
        {
            'name'          : 'glfw3',
            'alternateName' : 'GLFW'
        },
        {
            'name'          : 'glesv2',
            'alternateName' : 'gles2'
        },

    ]

}
