# Required changes to build to incorporate into file executable

handlers += {
    'name' : 'ogles2',
    'type' : 'renderer',
    'sources' : [
         'system/renderer/ogles2/src/main.c',
         'system/renderer/ogles2/src/texture.c'
    ],
    'shouldTest' : true,
    'dependencies' : [
        {
            'name'          : 'glfw3',
            'alternateName' : 'GLFW'
        },
        {
            'name'          : 'glesv2',
            'alternateName' : 'gles2'
        },

    ]
}
